--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "test": "mocha"
   },
   "dependencies": {
-    "yeoman-generator": "~0.12.0"
+    "yeoman-generator": "~0.12.0",
+    "underscore": "~1.5.1",
+    "underscore.string": "~2.2.0"
   },
   "devDependencies": {
     "mocha": "~1.10.0"
